# rust-demoeffects

./: .gitignore  Cargo.toml
bitmaps/: Program.cs
rillus/: Cargo.toml
rillus-macros/: Cargo.toml
rillus-macros/src/: lib.rs
rillus-web/: package.json
rillus-web/src/: main.ts
rillus/src/: lib.rs
sample/runner/: Cargo.toml
sample/runner/src/: main.rs
sample/sample-rust/: Cargo.toml
sample/sample-rust/src/: angles.rs  bitmap.rs  display.rs  fire.rs  lib.rs  plasma.rs  roads.rs  roads2.rs  tunnel.rs  utils.rs
sample/sample-rust/src/sprites/: coconut.rs  mod.rs
sample/sample-web/: index.html  package.json  vite.config.js  watch.ts
sample/sample-web/src/: main.ts  style.css
