[package]
name = "sample-rust"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]
default = ["dep:wee_alloc"]

[package.metadata.wasm-pack.profile.profiling]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']

[dependencies]
wasm-bindgen = "0.2.63"
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
colorsys = "0.6.7"
fastrand = "2.0.0"
line_drawing = "1.0.0"
bevy = "0.11.0"
# [dependencies.web-sys]
# version = "0.3"
# features = [
#   'ImageData',
#   'CanvasRenderingContext2d',
# ]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

# roads2: 2.60ms
[profile.release]
lto = true
opt-level = 's' # 2.60
[profile.profiling]
lto = true
opt-level = 's' # 2.60
